--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,16 @@
 Changelog
 =========
 
+1.0b1 - 2009-05-30
+------------------
+
+* Make z3c.blobfile (and blobs in general) a soft dependency. You'll need to
+  separately depend on z3c.blobfile (and probably pin it to versio 0.1.2) to
+  get the NamedBlobFile and NamedBlobImage fields. This means that
+  plone.namedfile can be used with ZODB versions that do not support BLOBs.
+  This policy will probably be revisited for a 2.0 release.
+  [optilude]
+
 1.0a1 - 2009-04-17
 ------------------
 
