--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,13 @@
 Changelog
 =========
 
+1.0b3 - 2009-10-08
+------------------
+
+* Add plone.rfc822 field marshaler (only installed if plone.rfc822 is
+  available)
+  [optilude]
+
 1.0b2 - 2009-09-17
 ------------------
 
