--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,16 @@
 Changelog
 =========
 
+1.0b5 - unreleased
+------------------
+
+* Add support for scaled images.  See usage.txt for details.
+  [davisagli]
+
+* Fix the field schemata so they can be used as the form schema when
+  adding the field using plone.schemaeditor.
+  [rossp]
+
 1.0b4 - 2009-11-17
 ------------------
 
