allow access to image scales in an edge case
svn path=/plone.namedfile/trunk/; revision=51654

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -4,6 +4,10 @@ Changelog
 1.0.4 - unreleased
 ------------------
 
+* Make sure image scales of allowed attributes can be accessed on disallowed
+  containers.
+  [davisagli]
+
 * Add unit tests for safe_filename, since not exercised within this module.
   (should be moved to plone.formwidget.namedfile?)
   [lentinj]
