--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -4,6 +4,9 @@ Changelog
 1.0.7 - unreleased
 ------------------
 
+* Add support for HEAD requests to @@images view
+  [anthonygerrard]
+
 
 1.0.6 - 2011-10-18
 ------------------
