--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,8 +1,13 @@
 Changelog
 =========
 
-1.0.7 - unreleased
-------------------
+1.1 - unreleased
+----------------
+
+* Move file and image value implementations here instead of extending
+  the ones from zope.app.file and z3c.blobfile. This helps tame a mess
+  of dependencies.
+  [davisagli]
 
 * Add support for HEAD requests to @@images view
   [anthonygerrard]
