--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,12 @@
 Changelog
 =========
 
+2.0.5 (unreleased)
+------------------
+
+- Nothing changed yet.
+
+
 2.0.4 (2014-01-27)
 ------------------
 
