--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -4,7 +4,9 @@ Changelog
 2.0.5 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Ensure zope.app.file.file module alias is created before its use in
+  file package.
+  [thomasdesvenain]
 
 
 2.0.4 (2014-01-27)
