--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -4,8 +4,7 @@ Changelog
 3.0.1 (unreleased)
 ------------------
 
-- Internationalize field factory label.
-  [thomasdesvenain]
+- Nothing changed yet.
 
 
 3.0.0 (2014-04-13)
