Revert "revert 1960e708db06c2047d7f605d4fea1493acd97a46, but with test fix". It doesnt fail for locally run tests but on jenkins CI

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -7,9 +7,9 @@ Changelog
 - Internationalize field factory label.
   [thomasdesvenain]
 
-- Cache image scales using the plone.stableResource ruleset
-  when they are accessed via UID-based URLs.
-  [davisagli]
+- Backward compatibility of NamedFile with zope.app.file FileChunk.
+  Avoids NamedFile validation unexpected failures.
+  [thomasdesvenain]
 
 
 2.0.5 (2014-02-19)
