simpler changelog entry

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -4,8 +4,7 @@ Changelog
 3.0.1 (unreleased)
 ------------------
 
-- respect field level security as possible with dexterity in download view
-  also for primary fields.
+- Respect field level security in download views also for primary fields.
   [jensens]
 
 - Internationalize field factory label.
