Fixed inserting filename in to Content-Disposition header. see https://github.com/plone/plone.app.blob/pull/7

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -4,6 +4,9 @@ Changelog
 3.0.1 (unreleased)
 ------------------
 
+- Fixed inserting filename in Content-Disposition header.
+  [kroman0]
+
 - Respect field level security in download views also for primary fields.
   [jensens]
 
