--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,12 @@
 Changelog
 =========
 
+2.0.8 (unreleased)
+------------------
+
+- Nothing changed yet.
+
+
 2.0.7 (2014-10-20)
 ------------------
 
