--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -4,7 +4,9 @@ Changelog
 2.0.9 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Don't fail, when accessing the ``tag`` method of the ``@@images`` view, if
+  ``scale`` returns ``None``.
+  [thet]
 
 
 2.0.8 (2015-04-29)
